--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
       }
       #loading-modal {
         position: fixed;
+        top: 0;
+        left: 0;
         display: flex;
         justify-content: center;
         align-items: center;
