--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="./loading.css">
     <title><%= webpackConfig.name %></title>
     <style>
-      @keyframes loading {
-        0% {
-          transform: rotate(0);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-      #loading-modal {
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100vw;
-        height: 100vh;
-        background: #fff;
-        z-index: 9999;
-      }
-
-      .loading {
-        width: 50px;
-        height: 50px;
-        animation: loading .6s infinite linear;
-      }
-
       #wechat-qrcode {
         width: 100%;
         height: 100vh;
@@ -46,6 +20,19 @@
       .wechat-qrcode-tip {
         margin-bottom: 10px;
       }
+
+      #loading-modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 100vh;
+        background: #fff;
+        z-index: 9999;
+      }
     </style>
   </head>
   <body>
@@ -55,7 +42,13 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <div id="loading-modal">
-      <img class="loading" src="./loading.png">
+      <div class="var-loading__cube var-loading__cube-large">
+        <div class="var-loading__cube-item var-loading__cube-item-large" style="background-color: #333"></div>
+        <div class="var-loading__cube-item var-loading__cube-item-large" style="background-color: #333"></div>
+        <div class="var-loading__cube-item var-loading__cube-item-large" style="background-color: #333"></div>
+        <div class="var-loading__cube-item var-loading__cube-item-large" style="background-color: #333"></div>
+        <div class="var-loading__cube-item var-loading__cube-item-large" style="background-color: #333"></div>
+      </div>
     </div>
 
     <script>
